# cne-dbt-template

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .releaserc.json  .sqlfluff  .sqlfluffignore  CI_WORKFLOW_README.md  README.md  Taskfile.yml  ascii_art.txt  bearer.ignore  bearer.yml  cli.ini  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  setup_devcontainer.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: basic-checks.yml  ci.yml  cli.yml
.task/: dbt.yml
cli/: config.py  dbt_cli.py  go_tasks.py  learn.py
cli/click_commands/: create.py  learn.py  log.py  select.py  update.py
cli/commands/: domain_command.py  macro_command.py  model_command.py
cli/const/: const_base.py  const_model.py  constant.py
cli/utils/: exceptions.py  file_helper.py  log_handlers.py  prompt_abort_exception.py  prompt_utils.py  user_options.py
cli/validate/: validate.py  validate_command.py  validate_decorators.py  validate_hook.py  validate_macro_name_plugin.py  validate_model_name_plugin.py  validate_model_plugin.py  validate_plugin.py  validate_sql_plugin.py  validate_yaml_exists_plugin.py  validate_yaml_plugin.py
macros/create_database/: create_database.sql  create_database.yml
macros/delete_database/: delete_database.sql  delete_database.yml
macros/generate_database_name/: generate_database_name.sql  generate_database_name.yml
macros/generate_schema_name/: generate_schema_name.sql  generate_schema_name.yml
tests/: test_go_tasks.py
(+75 files in other folders)
